--- a/compose.yaml
+++ b/compose.yaml
@@ -3,8 +3,8 @@ services:
     image: postgres:17.2-alpine
     container_name: postgres
     environment:
-      - "POSTGRES_USER: user"
-      - "POSTGRES_PASSWORD: password"
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
   pgadmin:
